# django-backend

./: .dockerignore  .gitignore  Makefile  entrypoint.sh  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/apps/common/: models.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: __init__.py  products.py
core/apps/products/services/: products.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose_django/: app.yaml  storages.yaml
